<resources>
    <string name="app_name">WordWanderer</string>
    <string name="buttonSubmit">submit</string>
    <string name="buttonCancel">cancel</string>
    <string name="editTextEnterNewPassword">Enter New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="wordwanderer">WORDWANDERER</string>
    <string name="welcome">WELCOME</string>
    <string name="display">Display</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="games">Games</string>
    <string name="modules">Modules</string>
    <string name="languages">Languages</string>
    <string name="translation">Translation</string>
    <string name="general_settings">General Settings</string>
    <string name="search">Search</string>
    <string name="fun">Fun</string>
    <string name="all">All</string>
    <string name="popular">Popular</string>
    <string name="academic">Academic</string>
    <string name="random">Random</string>
    <string name="topArrow1"><![CDATA[<]]></string>
    <string name="english">English</string>
    <string name="tagalog">Tagalog</string>
    <string name="about_app">Welcome to WordWanderer!\n</string>
    <string name="aboutApp">Your ultimate language companion!
        Whether you are a language enthusiast, a traveler, or someone looking to expand
        their linguistic horizons, we got you covered. Our app combines the power of
        language learning and translation into one seamless experience, designed to make
        communication across languages easier and more enjoyable.</string>

    <string name="terms">Terms and Conditions</string>

    <string name="condition">
        1. Use of the App\n
You are granted a non-exclusive, non-transferable, revocable license to access and use Wordwanderer
        strictly in accordance with these terms of use. As a condition of your use of the app,
        you warrant to us that you will not use the app for any purpose that is unlawful or
        prohibited by these terms.\n

2. Intellectual Property Rights\n
All content, features, and functionality (including but not limited to text, graphics,
        logos, images, and software) provided on the app are the exclusive property of WordWanderer, INC.
        or its licensors and are protected by international copyright, trademark, patent, trade secret,
        and other intellectual property or proprietary rights laws.\n

3. User Responsibilities\n
You must ensure that your use of the app complies with all applicable laws, regulations, and guidelines.
        You are responsible for the security of your account and must not share your account credentials
        with any third party. You are also responsible for any activities or actions under your account,
        whether or not you have authorized such activities or actions.\n

4. Prohibited Uses\n
You agree not to use the app:\n

For any unlawful or fraudulent purpose.\n
To solicit others to perform or participate in any unlawful acts.\n
To violate any regulations, rules, laws, or local ordinances.\n
To infringe upon or violate our intellectual property rights or the intellectual property rights of others.\n
To upload or transmit viruses or any other type of malicious code that will or may be used in any way that will affect the functionality or operation of the app.\n
5. Limitation of Liability\n
In no event shall WordWanderer, nor its directors, employees, partners, agents, suppliers, or affiliates,
        be liable for any indirect, incidental, special, consequential, or punitive damages, including
        without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from:\n

Your use or inability to use the app.\n
Any unauthorized access to or use of our servers and/or any personal information stored therein.\n
Any interruption or cessation of transmission to or from the app.\n
6. Disclaimer of Warranties\n
The app is provided on an "as-is" and "as-available" basis. [Your Company Name] makes no representations or warranties of any kind, express or implied, as to the operation of the app or the information, content, or materials included on the app. You expressly agree that your use of the app is at your sole risk.</string>
    <string name="aboutappdetails">Advanced Technology: \nUtilizing the latest in machine learning and natural language processing to provide accurate and context-aware translations.\n
Engaging Learning Methods: \nCombining traditional learning methods with innovative techniques to keep you motivated and engaged.\n
Comprehensive Resource: \nA one-stop solution for both language translation and language learning, catering to diverse needs.\n
Continuous Updates: \nRegular updates with new features, languages, and learning materials to ensure you always have the best tools at your disposal.</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privpolicy">
    <![CDATA[
    1. Information We Collect\n\n
    1.1 Personal Information<\n\n
    When you create an account, we collect information such as your name, email address, and password.
    If you choose to subscribe to premium features, we collect payment information, which is processed
    securely by our payment processors.\n\n
    1.2 Usage Information\n\n
    We collect information about your use of the app, including the languages you are learning, the courses
    you take, your progress, and your interactions with the app.
    We collect information on how you use the translation features, including the text you input for translation.\n\n
    1.3 Device Information\n\n
    We collect information about the device you use to access the app, including the device model,
    operating system, unique device identifiers, and network information.\n\n
    1.4 Location Information\n\n
    With your consent, we may collect information about your precise location to provide location-based
    services and improve the app\'s functionality.\n\n
    2. How We Use Your Information\n\n
    2.1 To Provide and Improve Our Services\n\n
    To personalize your learning experience and provide customized content.
    To process your transactions and manage your subscriptions.
    To improve the app\'s functionality, user experience, and content offerings.\n\n
    2.2 To Communicate with You\n\n
    To send you updates, notifications, and administrative messages.
    To respond to your inquiries and provide customer support.\n\n
    2.3 For Analytics and Research\n\n
    To analyze usage patterns and improve our services.
    To conduct research and develop new features.\n\n
    2.4 For Marketing and Promotions\n\n
    To send you promotional materials and offers, with your consent.\n\n
    3. Sharing Your Information\n\n
    3.1 Service Providers\n\n
    We may share your information with third-party service providers who perform services on our behalf,
    such as payment processing, data analysis, and customer support.\n\n
    3.2 Legal Compliance\n\n
    We may disclose your information if required to do so by law or in response to valid requests by public authorities.\n\n
    3.3 Business Transfers\n\n
    In the event of a merger, acquisition, or sale of all or a portion of our assets, your
    information may be transferred as part of that transaction.\n\n
    4. Your Rights and Choices\n\n
    4.1 Access and Update Your Information\n\n
    You can access and update your personal information through your account settings.\n\n
    4.2 Opt-Out of Marketing Communications\n\n
    You can opt-out of receiving promotional emails by following the unsubscribe instructions in those emails.\n\n
    4.3 Delete Your Account\n\n
    You can request the deletion of your account by contacting us at [Contact Email]. Please note that some
    information may remain in our records after your account has been deleted.\n\n
    5. Security\n\n
    We implement appropriate technical and organizational measures to protect your personal information against
    unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over
    the internet or electronic storage is 100% secure.\n\n
    6. Children\'s Privacy\n\n
    Our app is not intended for children under the age of 13. We do not knowingly collect personal
    information from children under 13. If we become aware that we have inadvertently collected
    such information, we will take steps to delete it.\n\n
    7. Changes to This Privacy Policy\n\n
    We may update this Privacy Policy from time to time. We will notify you of any changes
    by posting the new Privacy Policy on this page and updating the \"Last updated\" date.
    You are advised to review this Privacy Policy periodically for any changes.\n\n
    8. Contact Us\n\n
    If you have any questions about this Privacy Policy, please contact us at:\n\n
    Email: projectwordwanderer@gmail.com\n
    Address: Banilad, Cebu City, Philippines 6000
    ]]>
</string>
    <string name="upVIP"><b>Upgrade to VIP Member!</b></string>
    <string name="viptxt">Become a VIP Member to get your Unlimited Translation and Offline Packages!</string>
    <string name="avail">Available for everyone</string>
    <string name="download">Download Offline Packages</string>
    <string name="unlimited">Unlimited Translation</string>
    <string name="termsandconidtion">I agree to the <b>Terms and Conditions</b></string>

</resources>