<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wordwanderer_background"
    tools:context=".Activities.GamesActivity">

    <ImageView
        android:id="@+id/upgradeVipImageView"
        android:layout_width="348dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vip"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:boxBackgroundColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgradeVipImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextSearch"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@drawable/search_icon_black"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/allButton"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/all"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/popularButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

    <Button
        android:id="@+id/popularButton"
        android:layout_width="93dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/popular"
        app:layout_constraintEnd_toStartOf="@+id/ratingsButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/allButton"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

    <Button
        android:id="@+id/ratingsButton"
        android:layout_width="102dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/academic"
        app:layout_constraintEnd_toStartOf="@+id/randomButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/popularButton"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

    <Button
        android:id="@+id/randomButton"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:text="@string/fun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ratingsButton"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />



    <ImageButton
        android:id="@+id/btnBurger"
        android:layout_width="40dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_burger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutSearch"
        app:layout_constraintTop_toBottomOf="@+id/upgradeVipImageView" />

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="40dp"
        android:layout_height="16dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="4dp"
        android:text="Home"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/adsButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ads"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adsButton"
        app:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/textViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Profile"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/adsButton" />

    <FrameLayout
        android:id="@+id/imageViewContainer"
        android:layout_width="148dp"
        android:layout_height="153dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewGame3"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allButton"
        android:background="@drawable/border">

        <ImageView
            android:id="@+id/imageViewGame1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            app:srcCompat="@drawable/guesstheflag" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageViewGame2"
        android:layout_width="154dp"
        android:layout_height="144dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewContainer"
        app:srcCompat="@drawable/game3" />

    <ImageView
        android:id="@+id/imageViewGame3"
        android:layout_width="176dp"
        android:layout_height="149dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomButton"
        app:srcCompat="@drawable/game2" />

    <ImageView
        android:id="@+id/imageViewGame4"
        android:layout_width="181dp"
        android:layout_height="142dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewGame2"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGame3"
        app:srcCompat="@drawable/game4" />

    <ImageView
        android:id="@+id/accountButton"
        android:layout_width="44dp"
        android:layout_height="38dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/adsButton"
        app:srcCompat="@drawable/account_icon" />

    <ImageView
        android:id="@+id/homeButton"
        android:layout_width="43dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/adsButton"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/adsButton"
        android:layout_width="35dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ads" />

</androidx.constraintlayout.widget.ConstraintLayout>
